Added Links, Pictures and Text

--- a/about.html
+++ b/about.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About</title>
+  <title>Home</title>
+  <link rel="stylesheet" href="./style.css"/>
+  <script src="./javascript.js"></script>
 </head>
 <body>
-</body>
-</html>
+  <nav>
+    <div>
+     <h1>Edwin Vichesgarcia</h1>
+    </div>
+    <div>
+     <a href="./index.html">Home</a>
+     <a href="./about.html">About</a>
+     <a href="./portfolio.html">Portfolio</a>
+    </div>
+  </nav>
+  <h2 class="aboutMe">Few Things About Me</h2>
+  <section class="blockOne">
+    <h3>My time in the Army</h3>
+     <p>I served from October 17, 2012 right out of high school and finish my service in Feb 12, 2019.
+    I travel to two countries in my time of service which are South Korea for a year and Mexico for a few months.
+    Afterwards ended up going to the state of Georgie where i'll be staying the rest of my time in service, but was deployed to various mission that took me to many state in the US.
+    Some state where to Indiana, California, New Jersey, Louisiana, and Florida.
+    During those mission i help provide phone and online services to other military units so they can coordinate to their units and complete there mission. 
+     </p>
+     <img src="./Pictures/Army days.jpg" alt="Picture of me in Uniform" width="250"/>
+  </section>
+  <section class="blockTwo">
+    <h3>After my time of Service</h3>
+     <p>
+      After my time in the Army I enjoy my time at home taking care of my first born since i was away from him most of his first year of life.
+      I stayed in Georgie for couple of months til my wife had orders to go to South Korea for 2 years and we came back to moved to a Army base in Southern California.
+      As of right now we still in California as well with another member to the family. On top of all that i currently work as a part time Pre-School Assistant in the Army base 
+    </p>
+    <img src="./Pictures/My boys.jpg" alt="Picture of my Son's" width="250"/>
+  </section>
+  </body>
+  </html>
