--- a/index.html
+++ b/index.html
@@ -2,8 +2,27 @@
 <html>
 <head>
   <title>Home</title>
+  <link rel="stylesheet" href="./style.css"/>
+  <script src="./javascript.js"></script>
 </head>
 <body>
-    
+  <nav>
+    <div>
+     <h1>Edwin Vichesgarcia</h1>
+    </div>
+    <div>
+     <a href="./index.html">Home</a>
+     <a href="./about.html">About</a>
+     <a href="./portfolio.html">Portfolio</a>
+    </div>
+  </nav>
+  <h2>Veteran and Future Fullstack Developer</h2>
+    <p>Here to learn everything i can throught this course to become a future Fullstack Developer </p>
+    <p>"All our dreams can come true, if we have the courage to pursue them." - Walt Disney.</p>
+    <img src="./Pictures/68768719_2636742033023556_1106856249485426688_n.jpg" alt="Profile Picture of Myself" />
 </body>
+<footer>
+  <a href="#">Facebook</a>
+  <a href="#">LinkedIn</a>
+</footer>
 </html>
