--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfolio</title>
+  <title>Home</title>
+  <link rel="stylesheet" href="./style.css"/>
+  <script src="./javascript.js"></script>
 </head>
 <body>
-</body>
-</html>
+  <nav>
+    <div>
+     <h1>Edwin Vichesgarcia</h1>
+    </div>
+    <div>
+     <a href="./index.html">Home</a>
+     <a href="./about.html">About</a>
+     <a href="./portfolio.html">Portfolio</a>
+    </div>
+  </nav>
+  <h2>Projects</h2>
+  <h3>My First Ever Website</h3>
+    <p>I started this course to change careers to become a Fullstack Developer and throught the course i ended up creating my first ever
+      HTML that resulted in making my first website. 
+      <img src="./Pictures/First Code.png" alt="Picutes of my first code" width="300"/>
+    </p>
+  </body>
+  </html>
+  
