--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="./Pictures/68768719_2636742033023556_1106856249485426688_n.jpg" alt="Profile Picture of Myself" />
 </body>
 <footer>
-  <a href="#">Facebook</a>
-  <a href="#">LinkedIn</a>
+  <a href="https://www.Facebook.com">Facebook</a>
+  <a href="https://www.LinkedIn.com">LinkedIn</a>
 </footer>
 </html>
