--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
      <a href="./index.html">Home</a>
      <a href="./about.html">About</a>
      <a href="./portfolio.html">Portfolio</a>
+     <a href="./contact.html">Contact</a>
     </div>
   </nav>
   <h2 class="aboutMe">Few Things About Me</h2>
@@ -36,5 +37,9 @@
     </p>
     <img src="./Pictures/My boys.jpg" alt="Picture of my Son's" width="250"/>
   </section>
+  <footer>
+    <a href="https://www.Facebook.com">Facebook</a>
+    <a href="https://www.LinkedIn.com">LinkedIn</a>
+  </footer>
   </body>
   </html>
