--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<body>
 <head>
   <title>Home</title>
   <link rel="stylesheet" href="./style.css"/>
@@ -10,19 +10,23 @@
     <div>
      <h1>Edwin Vichesgarcia</h1>
     </div>
-    <div>
+    <div> 
      <a href="./index.html">Home</a>
      <a href="./about.html">About</a>
      <a href="./portfolio.html">Portfolio</a>
-    </div>
+     <a href="./contact.html">Contact</a>
+     </div>
   </nav>
+  <main>
   <h2>Veteran and Future Fullstack Developer</h2>
     <p>Here to learn everything i can throught this course to become a future Fullstack Developer </p>
     <p>"All our dreams can come true, if we have the courage to pursue them." - Walt Disney.</p>
-    <img src="./Pictures/68768719_2636742033023556_1106856249485426688_n.jpg" alt="Profile Picture of Myself" />
+    <img src="./Pictures/68768719_2636742033023556_1106856249485426688_n.jpg" alt="Profile Pic of Myself" width="300"/>
+    </main>
 </body>
 <footer>
   <a href="https://www.Facebook.com">Facebook</a>
   <a href="https://www.LinkedIn.com">LinkedIn</a>
 </footer>
+</body>
 </html>
