--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,27 @@
      <a href="./index.html">Home</a>
      <a href="./about.html">About</a>
      <a href="./portfolio.html">Portfolio</a>
+     <a href="./contact.html.">Contact</a>
     </div>
   </nav>
-  <h2>Projects</h2>
-  <h3>My First Ever Website</h3>
+  <h2 class="projects">Projects</h2>
+  <section>
+      <h3>My First Ever Website</h3>
+      <img class="coding" src="./Pictures/First Code.png" alt="Picutes of my first code"/>
     <p>I started this course to change careers to become a Fullstack Developer and throught the course i ended up creating my first ever
       HTML that resulted in making my first website. 
-      <img src="./Pictures/First Code.png" alt="Picutes of my first code" width="300"/>
     </p>
+  </section>
+  <section>
+    <h3>My Second Project</h3>
+    <img class="graph" src="./Pictures/pexels-fauxels-3183153.jpg" alt="Picture of different kinds of graphs"/>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus nemo repudiandae sint cum dignissimos aliquam consequatur molestias,
+       nostrum placeat ipsa, error aperiam cumque debitis veniam, harum itaque alias minus qui!</p>
+  </section>  
+  <footer>
+    <a href="https://www.Facebook.com">Facebook</a>
+    <a href="https://www.LinkedIn.com">LinkedIn</a>
+  </footer>
   </body>
   </html>
   
