--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html>
 <head>
   <title>Contact</title>
   <link rel="stylesheet" href="./style.css"/> 
   <script src="./javascript.js"></script>  
 </head>
-<body>
  <nav>
   <div>
    <h1>Edwin Vichesgarcia</h1>
@@ -17,9 +15,15 @@
     <a href="./contact.html">Contact</a>
   </div>
  </nav>
-<main>
-    <form>
-        
+  <h2>Contact Me:</h2>
+    <form action="./ThankYou.html" target="blank" method="GET">
+    <label for="fname">Full Name</label></form></br>
+    <input type="text" value="Name"></br>
+    <label for="email">Email</label></br>
+    <input type="text" value="Email"></br>
+    <label for="message">Message</label></br>
+    <textarea class="message" value="Message" rows="5" cols="55"></textarea></br>
+    <button>Submit</button>
     </form>
 </main>
   <footer>
