--- a/ThankYou.html
+++ b/ThankYou.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Thank You</title>
+    <link rel="stylesheet" href="./style.css"/>
+    <script src="./javascript.js"></script>
 </head>
 <body>
    <h2>Thank you for your Message</h2>
