--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,12 @@
   <h2>Contact Me:</h2>
     <form action="./ThankYou.html" target="blank" method="GET">
     <label for="fname">Full Name</label></form></br>
-    <input type="text" value="Name"></br>
+    <input type="text" id="fname" placeholder="Name"></br>
     <label for="email">Email</label></br>
-    <input type="text" value="Email"></br>
+    <input type="text" id="email" placeholder="Email"></br>
     <label for="message">Message</label></br>
     <textarea class="message" value="Message" rows="5" cols="55"></textarea></br>
-    <button>Submit</button>
+    <input type="submit" value="submit">
     </form>
 </main>
   <footer>
