Fixed Contact issue for Resubmit

--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@
  </nav>
   <h2>Contact Me:</h2>
     <form action="./ThankYou.html" target="blank" method="GET">
-    <label for="fname">Full Name</label></form></br>
-    <input type="text" id="fname" placeholder="Name"></br>
-    <label for="email">Email</label></br>
-    <input type="text" id="email" placeholder="Email"></br>
-    <label for="message">Message</label></br>
-    <textarea class="message" value="Message" rows="5" cols="55"></textarea></br>
-    <input type="submit" value="submit">
+      <label for="full-name">Name</label>
+      <input tpye="text" id="full-name" placeholder=" Full Name"/><br/>
+      <label for="user-email">Email</label>
+      <input tpye="email" id="user-email" placeholder="Email"/><br/>
+      <label for="message">Message</label></br>
+      <textarea class="message" value="Message" rows="5" cols="55"></textarea></br>
+      <button>Submit</button>
     </form>
 </main>
   <footer>
